--- a/pms/views/product_pricelist_item_views.xml
+++ b/pms/views/product_pricelist_item_views.xml
@@ -5,13 +5,15 @@
         <field name="inherit_id" ref="product.product_pricelist_item_form_view" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='applied_on']" position="before">
-                <field name="on_board_service" />
+                <field name="allowed_board_service_product_ids" invisible="1" />
+                <field name="allowed_board_service_room_type_ids" invisible="1" />
+
                 <field
-                    name="board_service_room_type_ids"
-                    widget="many2many_tags"
+                    name="board_service_room_type_id"
                     options="{'no_create': True,'no_open': True}"
-                    attrs="{'invisible': [('on_board_service','=',False)]}"
+                    domain="[('id', 'in',allowed_board_service_room_type_ids)]"
                 />
+
             </xpath>
             <xpath expr="//field[@name='min_quantity']" position="before">
                 <field
@@ -24,17 +26,26 @@
                 <field name="date_start_overnight" />
                 <field name="date_end_overnight" />
             </xpath>
+            <xpath expr="//field[@name='product_id']" position="attributes">
+                <attribute
+                    name="domain"
+                >[('id', 'in',allowed_board_service_product_ids)]</attribute>
+            </xpath>
         </field>
     </record>
     <record id="product_pricelist_item_view_tree" model="ir.ui.view">
         <field name="model">product.pricelist.item</field>
         <field name="arch" type="xml">
             <tree>
-                 <field name="pricelist_id" />
-                 <field string="Applicable on" name="name" />
-                 <field name="date_start_overnight" />
-                 <field name="date_end_overnight" />
-                 <field name="price" />
+                <field name="pricelist_id" />
+                <field string="Applicable on" name="name" />
+                <field name="board_service_room_type_id" />
+                <field string="Sale Date Start" name="date_start" />
+                <field string="Sale Date End" name="date_end" />
+                <field name="date_start_overnight" />
+                <field name="date_end_overnight" />
+                <field name="price" />
+                <field name="pms_property_ids" widget="many2many_tags" />
             </tree>
         </field>
     </record>
