--- a/pms/views/product_pricelist_views.xml
+++ b/pms/views/product_pricelist_views.xml
@@ -29,6 +29,18 @@
             </xpath>
 
 
+            <xpath
+                expr="//field[@name='item_ids']/tree/field[@name='name']"
+                position="after"
+            >
+                <field
+                    name="board_service_room_type_id"
+                    options="{'no_create': True, 'no_open': True}"
+                />
+            </xpath>
+
+
+
             <xpath expr="//widget[@name='web_ribbon']" position="after">
                 <div class="oe_button_box " name="button_box">
                     <button
