--- a/pms/views/product_pricelist_item_views.xml
+++ b/pms/views/product_pricelist_item_views.xml
@@ -23,8 +23,8 @@
                 />
             </xpath>
             <xpath expr="//field[@name='date_end']" position="after">
-                <field name="date_start_overnight" />
-                <field name="date_end_overnight" />
+                <field name="date_start_consumption" />
+                <field name="date_end_consumption" />
             </xpath>
             <xpath expr="//field[@name='product_id']" position="attributes">
                 <attribute
@@ -42,8 +42,8 @@
                 <field name="board_service_room_type_id" />
                 <field string="Sale Date Start" name="date_start" />
                 <field string="Sale Date End" name="date_end" />
-                <field name="date_start_overnight" />
-                <field name="date_end_overnight" />
+                <field name="date_start_consumption" />
+                <field name="date_end_consumption" />
                 <field name="price" />
                 <field name="pms_property_ids" widget="many2many_tags" />
             </tree>
