[IMP] pms_l10n_es: spanish police travellers report sending

--- a/pms_l10n_es/views/pms_property_views.xml
+++ b/pms_l10n_es/views/pms_property_views.xml
@@ -27,7 +27,7 @@
                             <field name="institution_password" password="True" />
                          </group>
                          <button
-                            name="test_gc_connection"
+                            name="test_connection"
                             class="btn btn-primary btn-sm"
                             type="object"
                             string="Test user/password"
