--- a/pms/views/pms_checkin_partner_views.xml
+++ b/pms/views/pms_checkin_partner_views.xml
@@ -59,19 +59,17 @@
                             <field name="reservation_id" />
                             <field name="folio_id" />
                             <field name="identifier" />
-                            <button
-                                type="action"
-                                class="oe_stat_button"
-                                icon="fa-file-pdf-o"
-                                name="%(action_report_viajero)d"
-                                context="{'partner_id': partner_id,'enter_date': arrival,
-                                  'exit_date': departure,'reservation_ids': reservation_id,
-                                  'hidden_cardex': True, 'edit_cardex': True }"
-                                string="Print in PDF"
-                            />
                             <field name="pms_property_id" invisible="1" />
                         </group>
                     </group>
+                    <button
+                        type="action"
+                        class="btn-primary float-right"
+                        icon="fa-file-pdf-o"
+                        name="%(action_report_viajero)d"
+                        string="Print in PDF"
+                        attrs="{'invisible': [('state','not in', ('onboard','done'))]}"
+                    />
                 </sheet>
             </form>
         </field>
