--- a/pms/views/pms_checkin_partner_views.xml
+++ b/pms/views/pms_checkin_partner_views.xml
@@ -66,7 +66,7 @@
                         type="action"
                         class="btn-primary float-right"
                         icon="fa-file-pdf-o"
-                        name="%(action_report_viajero)d"
+                        name="%(action_traveller_report)d"
                         string="Print in PDF"
                         attrs="{'invisible': [('state','not in', ('onboard','done'))]}"
                     />
